...
                                                <rect key="frame" x="1.5" y="0.0" width="275.5" height="34"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="用户名" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4Wz-B9-gGh">
                                                        <rect key="frame" x="0.0" y="0.0" width="236" height="34"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="frame" x="0.0" y="56" width="278" height="34"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Pq2-JE-F7s">
                                                        <rect key="frame" x="0.0" y="0.0" width="236" height="34"/>
                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                            <constraint firstAttribute="width" constant="20" id="pPU-QG-fJc"/>
                                                        </constraints>
                                                        <state key="normal" title="登录按钮" image="arrow.right.circle" catalog="system"/>
                                                        <connections>
                                                            <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="auI-X1-Csz"/>
...
                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                <items>
                                    <navigationItem title="购物车" id="HvY-Os-bwR">
                                        <rightBarButtonItems>
                                            <barButtonItem style="plain" id="Nnn-lC-Si8">
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="头像" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0gh-YD-WFP">
                                                    <rect key="frame" x="16" y="41" width="26" height="15"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12.399999618530273"/>
...
