...

    override func tableView(_ tableView: UITableView, didSelectRowAt indexPath: IndexPath) {
        self.tableView.deselectRow(at: indexPath, animated: true)

        if indexPath.section == 0 {
            if indexPath.row == 0 {
                let alertController = UIAlertController(title: "想进行什么操作？",
                                                        message: "您可以修改自己的头像。",
                                                        preferredStyle: .actionSheet)
                let cancelAction = UIAlertAction(title: "取消",
                                                 style: .cancel,
                                                 handler: nil)

                let changeAvatarAction = UIAlertAction(title: "修改头像",
                                                       style: .default,
                                                       handler: { _ in
                                                        
                                                           self.delegate?.updateAvatar()

                })
...
